syntax = "proto3";

package response_code;

enum RespCode {
  UNKNOWN_ERROR = 0;
  SUCCESS = 1;
  UNABLE_TO_PROCESS = 2;
}